--- a/css/works.css
+++ b/css/works.css
@@ -54,20 +54,39 @@ nav{
     display: inline-block ;
     padding: 1% 30%;
 }
-
+ .projects h4{
+    font-size: 40px;
+    text-align:  center;
+    margin: 5%;
+ }
 .work-description{
+   
     font-size: large;
     width: fit-content;
     line-height: 1.5 ;
+    /* border-top: 1px dotted red; */
+    margin-bottom: 10%;
+}
+
+.work-description h3{
+    text-align: center;
 }
 .screenshots{
     display: flex;
-
     flex-wrap: wrap;
+    gap: 12px;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 .screenshots img{
     width: 30%;
     height: 30%;
+    transition:0.25s ease;
+}
+
+.screenshots img:hover{
+    scale: 200%;
+    position: inherit;
 }
 .btn_2{
     text-decoration: none;
