--- a/css/index.css
+++ b/css/index.css
@@ -125,6 +125,7 @@ nav .fa{
     width: 50%;
     margin: auto;
     padding-top: 50px;
+    font-family: 'League Spartan', sans-serif;
 }
 .introductions h1{
     color:cornflowerblue;
