--- a/css/works.css
+++ b/css/works.css
@@ -1,8 +1,8 @@
 *{
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
-
 .header {
     min-height: 20vh;
     width: 100%;
@@ -24,7 +24,7 @@ nav{
 .nav-links ul li{
     list-style: none;
     display: inline-block;
-    padding: 2px 150px;
+    padding: 2px 100px;
     position: relative;
 }
 
@@ -46,6 +46,78 @@ nav{
 
 .nav-links ul li:hover::after{
     width: 90%;
+}
+
+.text-box{
+    width: 90%;
+    position: absolute;
+    top:30%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.text-box h1{
+    color:cadetblue;
+    font-size: 60px;
+}
+
+.text-box p{
+    margin: 40px 0 40px;
+    font-size: 40px;
+}
+
+.btn{
+    display: inline-block;
+    text-decoration: none;
+    color:chocolate;
+    border-radius: 25px;
+    border: 3px solid white;
+    padding: 12px 34px;
+    font-size: 20px;
+    background:transparent;
+    position: relative;
+    cursor: pointer;
+}
+
+.btn:hover{
+    background-color: rgba(223, 174, 129, 0.5);
+    transition: 1s;
+}
+
+nav .fa{
+    display: none;
+}
+
+@media(max-width: 700px){
+    .text-box h1{
+        font-size: 20px;
+    }
+    .nav-links ul li{
+        display: block;
+        padding: 20px 30px;
+    }
+    .nav-links ul li a{
+        font-size: 15px;
+    }
+    .nav-links{
+        position: absolute;
+        background: #d69b94;
+        height: 100vh;
+        width: 150px;
+        top:0;
+        right:-200px;
+        text-align: left;
+        z-index: 2;
+        transition: 1s;
+    }
+    nav .fa{
+        display: block;
+        color: #fff;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+    }
 }
 
 /* Work Descriptions */
