--- a/index.css
+++ b/index.css
@@ -50,7 +50,7 @@ nav{
 
 .text-box{
     width: 90%;
-    position: absolute;
+    position: relative;
     top:30%;
     left:50%;
     transform: translate(-50%, -50%);
