--- a/index.css
+++ b/index.css
@@ -189,6 +189,10 @@ h2{
     box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
     border-radius: 0%;
 }
+.project-description b{
+    color:brown;
+
+}
 /* .projects-col:hover .btn_2{
     visibility: visible;
 } */
