--- a/works.css
+++ b/works.css
@@ -130,32 +130,44 @@ nav .fa{
     font-family: 'League Spartan', sans-serif;
 }
  .projects h4{
-    font-size: 150%;
+    font-size: 200%;
     text-align:  center;
     margin: 5%;
  }
+ .projects h1{
+    font-size: 180%;
+    color:orange;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ }
 .work-description{
    
-    font-size: 100%;
+    font-size: 120%;
     width: fit-content;
-    line-height: 1.5 ;
-    /* border-top: 1px dotted red; */
-    margin-bottom: 10%;
+    line-height:1.5;
+    margin-bottom: 5%;
 }
 
 .work-description h3{
-    text-align: center;
+    text-align: left;
+    padding-top: 10px;
+    padding-bottom: 5px;
 }
 
 .work-description h2 i{
     color:brown;
 }
+
+.work-description iframe{
+    width: 800px;
+    height: 400px;
+}
+
 .screenshots{
     display: flex;
     flex-wrap: wrap;
     gap: 1%;
     margin-top: 3%;
-    margin-bottom: 3%;
+    margin-bottom: 5%;
 }
 .screenshots img{
     width: 30%;
@@ -183,10 +195,7 @@ nav .fa{
     transition: 1s;
 }
 
-.work-description iframe{
-    width: 800px;
-    height: 400px;
-}
+
 @media(max-width: 700px){
     .nav-links ul li{
         display: block;
