--- a/index.css
+++ b/index.css
@@ -173,7 +173,7 @@ h2{
     padding: 20px 12px;
     box-sizing: border-box;
     border-radius: 20%;
-    height:30%;
+    height:300px;
     transition: 1s ease;
 }
 .project-name{
