--- a/index.css
+++ b/index.css
@@ -144,23 +144,26 @@
 
 @media(max-width: 700px) {
     .text-box {
-        margin-top: 20%;
+        margin-top: 30%;
     }
 
+    .text-box{
+        font-size: smaller;
+    }
     .row {
         flex-direction: column;
     }
 
     .introductions h1{
-        font-size: 6em;
+        font-size: 3em;
     }
 
     .introductions p{
-        font-size: 4em;
+        font-size: 1em;
     }
 
     .games h2{
-        font-size: 3em;
+        font-size: 2em;
         margin-top: 10%;
     }
 
