--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+
+}
+
+body{
+    background-color:#f7f4f4;
 }
 a {
     text-decoration: none;
