--- a/project.css
+++ b/project.css
@@ -6,9 +6,13 @@
 
 .title{
     line-height: 2em;
-    display: grid;
-    justify-content: center;
-    justify-items: center;
+    display: block;
+    width: 50%;
+    height: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
+    /* justify-content: center;
+    justify-items: center; */
     gap: 3em
 }
 .project-title{
@@ -22,12 +26,12 @@
     display: block;
 }
 .cover {
-    width: 60%;
     text-align: center;
+    
 }
 .cover video{
     width: 100%;
-    display: inline-block;
+    /* display: inline-block; */
 }
 
 .cover .btn_2{
@@ -35,8 +39,8 @@
 }
 
 .game-info{
-    inline-size:50%; 
-    overflow-wrap: break-all;
+    inline-size:100%; 
+    /* overflow-wrap: hidden; */
 }
 /* 
 .description{
@@ -83,7 +87,7 @@
 }
 
 .contribution{
-    margin-top: 5%;
+margin-top: 5%;
   overflow: hidden;
 }
 
@@ -98,11 +102,11 @@
     .project-title{
         font-size: smaller;
     }
-    .game-info{
-        order: 2;
-    }
-    .cover{
-        order: 1;
+    .title{
+        width: 80%;
+        height: 80%;
+        margin-left: 10%;
+        margin-right: 20%;
     }
     .pics img{
         width: 50%;
@@ -113,6 +117,10 @@
         scale: 150%;
     }
 
+    .contribution img{
+        width: 100%;
+        height: 100%;
+    }
     .title{
         flex-direction: column;
         align-items: center;
