--- a/index.css
+++ b/index.css
@@ -129,7 +129,7 @@
 .tags .tag2{
     margin: 1%;
     border-radius: 5px;
-    background-color:brown;
+    background-color:cornflowerblue;
     padding: 5px 10px;
     font-size: 1em;
 }
