--- a/index.css
+++ b/index.css
@@ -1,12 +1,12 @@
 .container {
-    padding: 1%;
+    /* padding: 1%; */
     width: 100%;
 }
 
 .text-box {
     width: 90%;
     position: relative;
-    margin-top: 50%;
+    margin-top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -19,7 +19,7 @@
 }
 
 .text-box p {
-    margin: 40px 0 40px;
+    /* margin: 40px 0 40px; */
     font-size: 3em;
 }
 
@@ -29,7 +29,7 @@
     color: chocolate;
     border-radius: 25px;
     border: 3px solid white;
-    padding: 12px 34px;
+    padding: 12px 12px;
     font-size: 1em;
     background: transparent;
     position: relative;
