--- a/index.css
+++ b/index.css
@@ -6,20 +6,22 @@
 .text-box {
     width: 90%;
     position: relative;
-    margin-top: 30%;
+    margin-top: 10%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    font-family: 'Silkscreen', cursive;
+
 }
 
-.text-box h1 {
+/* .text-box h1 {
     color: cadetblue;
     font-size: 5vw;
-}
+} */
 
-.text-box p {
+.text-box  {
     /* margin: 40px 0 40px; */
+    color: cadetblue;
+    font-family: 'Silkscreen', cursive;
     font-size: 3em;
 }
 
@@ -30,7 +32,7 @@
     border-radius: 25px;
     border: 3px solid white;
     padding: 12px 12px;
-    font-size: 1em;
+    /* font-size: 1em; */
     background: transparent;
     position: relative;
     cursor: pointer;
