updated particle effect

--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@
 .text-box  {
     /* margin: 40px 0 40px; */
     color: cadetblue;
-    font-family: 'Silkscreen', cursive;
+    font-family: 'League Spartan', sans-serif;
     font-size: 3em;
 }
 
