Revert "small changes"
This reverts commit e409aaa3381d069356a98b3b822ed996f907f11e.

--- a/index.css
+++ b/index.css
@@ -157,8 +157,7 @@
     text-align: center;
 }
 .text{
-    text-align: center;
-    font-size: large;
+    text-align: left;
 }
 .text b {
     color: brown;
