--- a/about.css
+++ b/about.css
@@ -1,79 +1,10 @@
-*{
-    margin: 0;
-    padding: 0;
-    scroll-behavior: smooth;
-}
-.header {
-    min-height: 20vh;
-    width: 100%;
-    background-color: antiquewhite;
-    font-family: 'Silkscreen', cursive;
-}
-nav{
-    display: flex;
-    padding: 1% 6%;
-    justify-content: space-between;
-    align-items: center;
+.about h1 {
+    font-size: 2.5rem;
+    color: cadetblue;
 }
 
-.nav-links{
-    flex: 1;
-    text-align: center;
-}
-
-.nav-links ul li{
-    list-style: none;
-    display: inline-block;
-    padding: 2px 2px;
-    position: relative;
-}
-
-.nav-links ul li a{
-    color: brown;
-    text-decoration: none;
-    font-size: x-large;
-}
-
-.nav-links ul li::after{
-    content: '';
-    width: 0%;
-    height: 3px;
-    background: #db20079f;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-}
-
-.nav-links ul li:hover::after{
-    width: 90%;
-}
-
-.text-box{
-    width: 90%;
-    position: absolute;
-    top:30%;
-    left:50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-.text-box h1{
-    color:cadetblue;
-    font-size: 60px;
-}
-
-.text-box p{
-    margin: 40px 0 40px;
-    font-size: 40px;
-}
-
-.about { 
-    font-family: 'League Spartan', sans-serif;
-    font-size: larger;
-    inline-size:100%;
-    line-height:50px;
-    width: 50%;
-    height: 50%;
-    margin-left: 25%;
-    margin-right: 25%;
+.about p {
+    font-size: 1.2rem;
+    line-height: 1.6;
+    margin: 20px 0;
 }
