--- a/style.css
+++ b/style.css
@@ -1,113 +1,130 @@
-*{
+/* Reset and Global Settings */
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     scroll-behavior: smooth;
-
 }
 
-body{
-    background-color:#f7f4f4;
+.header .menu-icon,
+.header .close-icon {
+    display: none;
 }
+
+body {
+    height: 100%;
+    background-color: #f7f4f4;
+    font-family: 'League Spartan', sans-serif;
+}
+
 a {
     text-decoration: none;
 }
-.header {
-    min-height: 10vh;
-    width: 100%;
-    background-color: antiquewhite;
-    font-family: 'Silkscreen', cursive;
-}
 
-.footer{
-    margin-top: 20%;
+/* Header & Footer */
+.header, .footer {
     min-height: 10vh;
     width: 100%;
     background-color: antiquewhite;
-    font-family: 'Silkscreen', cursive;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Silkscreen', cursive;
 }
 
 .footer-icons {
-    font-size: 3em;
+    font-size: 2em;
 }
-nav{
+
+/* Navigation */
+nav {
     display: flex;
-    padding: 1% 6%;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin: 2%;
 }
 
-.nav-links{
-    flex: 1;
-    text-align: center;
-}
-
-.nav-links ul li{
+.nav-links ul {
+    display: flex;
     list-style: none;
-    display: inline-block;
-    padding: 2px 100px;
+    gap: 20px;
+}
+
+.nav-links ul li a {
+    color: brown;
+    font-size: x-large;
     position: relative;
 }
 
-.nav-links ul li a{
-    color: brown;
-    text-decoration: none;
-    font-size: x-large;
-}
-
-.nav-links ul li::after{
+.nav-links ul li::after {
     content: '';
-    width: 0%;
+    width: 0;
     height: 3px;
     background: #db20079f;
     display: block;
     margin: auto;
-    transition: 0.5s;
+    transition: width 0.5s;
 }
 
-.nav-links ul li:hover::after{
+.nav-links ul li:hover::after {
     width: 90%;
 }
-nav .fa{
-    display: none;
+
+/* Utility Classes */
+.centered-content {
+    width: 90%;
+    text-align: center;
+    margin: 0 auto;
 }
 
-p {
-    font-family: 'League Spartan', sans-serif;
+/* Buttons */
+.btn {
+    display: inline-block;
+    color: chocolate;
+    border: 2px solid white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background 0.3s;
+    cursor: pointer;
 }
-@media(max-width: 700px){
-    .header{
-        width: auto;
-    }
-    .nav-links ul li{
+
+.btn:hover {
+    background-color: rgba(223, 174, 129, 0.5);
+}
+
+/* Responsive Design for Mobile */
+@media (max-width: 768px) {
+    /* Show menu and close icons on mobile */
+    /* .header .menu-icon {
         display: block;
-        padding: 20px 30px;
-    }
-    .nav-links ul li a{
-        font-size: 15px;
-    }
-    .nav-links{
-        position: absolute;
-        background: #d69b94;
-        height: 100vh;
-        width: 150px;
-        top:0;
-        right:-200px;
-        text-align: left;
-        z-index: 2;
-        transition: 1s;
-    }
-    nav .fa{
-        display: block;
-        color: #fff;
-        margin: 10px;
-        font-size: 22px;
+        font-size: 1.5em;
+        color: brown;
         cursor: pointer;
     }
 
-    .footer-icons{
-        font-size: 2em;
+    .header .close-icon {
+        display: block;
+        font-size: 1.5em;
+        color: brown;
+        cursor: pointer;
+        position: absolute;
+        right: 10px;
+        top: 10px;
     }
+
+    /* Sidebar Navigation for Mobile */
+    /* .nav-links {
+        display: none; 
+        position: fixed;
+        top: 0;
+        right: -200px; 
+        width: 200px;
+        height: 100vh;
+        background: #d69b94;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        transition: right 0.3s ease;
+    }  */
 }
