--- a/index.css
+++ b/index.css
@@ -10,9 +10,21 @@
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 20px; 
-    margin-top: 3%;
+    margin:3%;
 }
 
+.games .btn{
+    display: inline-block;
+    color: #ffffff;
+    background-color: #FF7070;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 1em;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    text-align: center;
+    margin: 20px auto 0 auto;
+}
 .project-row a.projects-col {
     display: flex;
     flex-direction: column;
