--- a/about.css
+++ b/about.css
@@ -1,10 +1,17 @@
 .about h1 {
     font-size: 2.5rem;
     color: cadetblue;
+    text-align: center;
 }
 
 .about p {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     line-height: 1.6;
     margin: 20px 0;
+}
+
+.about {
+    min-height: 100vh;
+    flex: 1;
+    padding: 20px;
 }
