--- a/index.css
+++ b/index.css
@@ -39,7 +39,7 @@
 
 .projects-col img {
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 8px;
     transition: transform 0.3s ease;
 }
